tdf#48025 sc: update the filter criteria when deleting columns

The autofilter criteria weren't remain with the filtered column
when we deleted a column left of the filtered column or
the filtered column itself.

Change-Id: I0eb103ea5569d82eac4d81bce1b31b0c3bbcbf41